# Apis/secretaría de alumnos/python-flask-server/swagger_server/controllers/asignaturas_controller.py
@@ -1,4 +1,5 @@
 import connexion
+from swagger_server.models.asignatura import Asignatura
 from swagger_server.models.creditos import Creditos
 from datetime import date, datetime
 from typing import List, Dict
@@ -14,5 +15,17 @@ def consultar_creditos_asignatura(nombre_asignatura):
     :type nombre_asignatura: str
 
     :rtype: Creditos
+    """
+    return 'do some magic!'
+
+
+def get_asignaturas_disponibles(id_alumno):
+    """
+    Asignaturas disponibles para matricular
+    Devuelve una lista con las asignaturas en las que puede matricularse un alumno
+    :param id_alumno: id del alumno
+    :type id_alumno: str
+
+    :rtype: List[Asignatura]
     """
     return 'do some magic!'
