# Apis/secretaría de alumnos/python-flask-server/swagger_server/controllers/matricula_controller.py
@@ -1,24 +1,22 @@
 import connexion
-from swagger_server.models.asignatura import Asignatura
+from swagger_server.models.asignatura_matricula import AsignaturaMatricula
 from datetime import date, datetime
 from typing import List, Dict
 from six import iteritems
 from ..util import deserialize_date, deserialize_datetime
 
 
-def realizar_automatricula(nombre_usuario, contrasea, asignaturas=None):
+def realizar_automatricula(id_usuario, asignaturas=None):
     """
     Automatricula
     Permite a un alumno realizar su automatricula
-    :param nombre_usuario: nombre del usuario
-    :type nombre_usuario: str
-    :param contrasea: contraseña del usuario
-    :type contrasea: int
+    :param id_usuario: nombre del usuario
+    :type id_usuario: str
     :param asignaturas: 
     :type asignaturas: list | bytes
 
     :rtype: None
     """
     if connexion.request.is_json:
-        asignaturas = [Asignatura.from_dict(d) for d in connexion.request.get_json()]
+        asignaturas = [AsignaturaMatricula.from_dict(d) for d in connexion.request.get_json()]
     return 'do some magic!'
