# Apis/secretaría de alumnos/python-flask-server/swagger_server/models/alumno.py
@@ -12,7 +12,7 @@ class Alumno(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, nombre: str=None, apellido: str=None, nombreusuario: str=None, contrasea: str=None, dni: str=None, direccion: str=None):
+    def __init__(self, nombre: str=None, apellido: str=None, dni: str=None, direccion: str=None, correo: str=None, telefono: str=None):
         """
         Alumno - a model defined in Swagger
 
@@ -20,39 +20,39 @@ class Alumno(Model):
         :type nombre: str
         :param apellido: The apellido of this Alumno.
         :type apellido: str
-        :param nombreusuario: The nombreusuario of this Alumno.
-        :type nombreusuario: str
-        :param contrasea: The contrasea of this Alumno.
-        :type contrasea: str
         :param dni: The dni of this Alumno.
         :type dni: str
         :param direccion: The direccion of this Alumno.
         :type direccion: str
+        :param correo: The correo of this Alumno.
+        :type correo: str
+        :param telefono: The telefono of this Alumno.
+        :type telefono: str
         """
         self.swagger_types = {
             'nombre': str,
             'apellido': str,
-            'nombreusuario': str,
-            'contrasea': str,
             'dni': str,
-            'direccion': str
+            'direccion': str,
+            'correo': str,
+            'telefono': str
         }
 
         self.attribute_map = {
             'nombre': 'nombre',
             'apellido': 'apellido',
-            'nombreusuario': 'nombreusuario',
-            'contrasea': 'contraseña',
             'dni': 'dni',
-            'direccion': 'direccion'
+            'direccion': 'direccion',
+            'correo': 'correo',
+            'telefono': 'telefono'
         }
 
         self._nombre = nombre
         self._apellido = apellido
-        self._nombreusuario = nombreusuario
-        self._contrasea = contrasea
         self._dni = dni
         self._direccion = direccion
+        self._correo = correo
+        self._telefono = telefono
 
     @classmethod
     def from_dict(cls, dikt) -> 'Alumno':
@@ -109,48 +109,6 @@ class Alumno(Model):
         self._apellido = apellido
 
     @property
-    def nombreusuario(self) -> str:
-        """
-        Gets the nombreusuario of this Alumno.
-
-        :return: The nombreusuario of this Alumno.
-        :rtype: str
-        """
-        return self._nombreusuario
-
-    @nombreusuario.setter
-    def nombreusuario(self, nombreusuario: str):
-        """
-        Sets the nombreusuario of this Alumno.
-
-        :param nombreusuario: The nombreusuario of this Alumno.
-        :type nombreusuario: str
-        """
-
-        self._nombreusuario = nombreusuario
-
-    @property
-    def contrasea(self) -> str:
-        """
-        Gets the contrasea of this Alumno.
-
-        :return: The contrasea of this Alumno.
-        :rtype: str
-        """
-        return self._contrasea
-
-    @contrasea.setter
-    def contrasea(self, contrasea: str):
-        """
-        Sets the contrasea of this Alumno.
-
-        :param contrasea: The contrasea of this Alumno.
-        :type contrasea: str
-        """
-
-        self._contrasea = contrasea
-
-    @property
     def dni(self) -> str:
         """
         Gets the dni of this Alumno.
@@ -191,4 +149,46 @@ class Alumno(Model):
         """
 
         self._direccion = direccion
+
+    @property
+    def correo(self) -> str:
+        """
+        Gets the correo of this Alumno.
+
+        :return: The correo of this Alumno.
+        :rtype: str
+        """
+        return self._correo
+
+    @correo.setter
+    def correo(self, correo: str):
+        """
+        Sets the correo of this Alumno.
+
+        :param correo: The correo of this Alumno.
+        :type correo: str
+        """
+
+        self._correo = correo
+
+    @property
+    def telefono(self) -> str:
+        """
+        Gets the telefono of this Alumno.
+
+        :return: The telefono of this Alumno.
+        :rtype: str
+        """
+        return self._telefono
+
+    @telefono.setter
+    def telefono(self, telefono: str):
+        """
+        Sets the telefono of this Alumno.
+
+        :param telefono: The telefono of this Alumno.
+        :type telefono: str
+        """
+
+        self._telefono = telefono
 
