# Apis/secretaría de alumnos/python-flask-server/swagger_server/models/asignatura.py
@@ -12,7 +12,7 @@ class Asignatura(Model):
     NOTE: This class is auto generated by the swagger code generator program.
     Do not edit the class manually.
     """
-    def __init__(self, nombre: str=None, codigo_asignatura: int=None, turno: str=None):
+    def __init__(self, nombre: str=None, codigo_asignatura: int=None, creditos: str=None, tipo: str=None):
         """
         Asignatura - a model defined in Swagger
 
@@ -20,24 +20,29 @@ class Asignatura(Model):
         :type nombre: str
         :param codigo_asignatura: The codigo_asignatura of this Asignatura.
         :type codigo_asignatura: int
-        :param turno: The turno of this Asignatura.
-        :type turno: str
+        :param creditos: The creditos of this Asignatura.
+        :type creditos: str
+        :param tipo: The tipo of this Asignatura.
+        :type tipo: str
         """
         self.swagger_types = {
             'nombre': str,
             'codigo_asignatura': int,
-            'turno': str
+            'creditos': str,
+            'tipo': str
         }
 
         self.attribute_map = {
             'nombre': 'nombre',
             'codigo_asignatura': 'codigo_asignatura',
-            'turno': 'turno'
+            'creditos': 'creditos',
+            'tipo': 'tipo'
         }
 
         self._nombre = nombre
         self._codigo_asignatura = codigo_asignatura
-        self._turno = turno
+        self._creditos = creditos
+        self._tipo = tipo
 
     @classmethod
     def from_dict(cls, dikt) -> 'Asignatura':
@@ -94,23 +99,44 @@ class Asignatura(Model):
         self._codigo_asignatura = codigo_asignatura
 
     @property
-    def turno(self) -> str:
+    def creditos(self) -> str:
         """
-        Gets the turno of this Asignatura.
+        Gets the creditos of this Asignatura.
 
-        :return: The turno of this Asignatura.
+        :return: The creditos of this Asignatura.
         :rtype: str
         """
-        return self._turno
+        return self._creditos
 
-    @turno.setter
-    def turno(self, turno: str):
+    @creditos.setter
+    def creditos(self, creditos: str):
         """
-        Sets the turno of this Asignatura.
+        Sets the creditos of this Asignatura.
 
-        :param turno: The turno of this Asignatura.
-        :type turno: str
+        :param creditos: The creditos of this Asignatura.
+        :type creditos: str
         """
 
-        self._turno = turno
+        self._creditos = creditos
+
+    @property
+    def tipo(self) -> str:
+        """
+        Gets the tipo of this Asignatura.
+
+        :return: The tipo of this Asignatura.
+        :rtype: str
+        """
+        return self._tipo
+
+    @tipo.setter
+    def tipo(self, tipo: str):
+        """
+        Sets the tipo of this Asignatura.
+
+        :param tipo: The tipo of this Asignatura.
+        :type tipo: str
+        """
+
+        self._tipo = tipo
 
