# Apis/secretaría de alumnos/python-flask-server/swagger_server/models/asignatura_matricula.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from .base_model_ import Model
+from datetime import date, datetime
+from typing import List, Dict
+from ..util import deserialize_model
+
+
+class AsignaturaMatricula(Model):
+    """
+    NOTE: This class is auto generated by the swagger code generator program.
+    Do not edit the class manually.
+    """
+    def __init__(self, codigo_asignatura: str=None):
+        """
+        AsignaturaMatricula - a model defined in Swagger
+
+        :param codigo_asignatura: The codigo_asignatura of this AsignaturaMatricula.
+        :type codigo_asignatura: str
+        """
+        self.swagger_types = {
+            'codigo_asignatura': str
+        }
+
+        self.attribute_map = {
+            'codigo_asignatura': 'codigo_asignatura'
+        }
+
+        self._codigo_asignatura = codigo_asignatura
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'AsignaturaMatricula':
+        """
+        Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Asignatura_Matricula of this AsignaturaMatricula.
+        :rtype: AsignaturaMatricula
+        """
+        return deserialize_model(dikt, cls)
+
+    @property
+    def codigo_asignatura(self) -> str:
+        """
+        Gets the codigo_asignatura of this AsignaturaMatricula.
+
+        :return: The codigo_asignatura of this AsignaturaMatricula.
+        :rtype: str
+        """
+        return self._codigo_asignatura
+
+    @codigo_asignatura.setter
+    def codigo_asignatura(self, codigo_asignatura: str):
+        """
+        Sets the codigo_asignatura of this AsignaturaMatricula.
+
+        :param codigo_asignatura: The codigo_asignatura of this AsignaturaMatricula.
+        :type codigo_asignatura: str
+        """
+
+        self._codigo_asignatura = codigo_asignatura
+
